@@ -12,6 +12,8 @@ Version 0.63
 	- [SETUPAPI input] Added a 'detailed_time' check, to reduce the text inside the alert by default, unless detail option used.
 	- [log2timeline] Updated the man page to reflect updates to the 'detailed_time' changes to setupapi input module.
 	- [WIN library] Added a mapping to map up all Windows use of timezones to the one used in the DateTime library.
+	- [win_sysinfo PreProc] Updated the pre-processing library so that it checks if a known transform of a Windows named
+	timezone information is available and if it is it will compare it to the chosen timezone (and change it if they differ).
 	- [LOG2TIMELINE] Small bug in the log2timeline library, causing input modules list that has more than one - sign in it
 	not properly verified.
 
